--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,70 @@
     <artifactId>algorithm-util</artifactId>
     <version>1.0</version>
 
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>syanthony</name>
+            <email>3164297994@qq.com</email>
+            <organization>personal</organization>
+        </developer>
+    </developers>
+
+    <scm>
+        <url>git@github.com:shdsoul/algorithm-util.git</url>
+        <connection>scm:git:git@github.com:shdsoul/algorithm-util.git</connection>
+        <developerConnection>scm:git:git@github.com:shdsoul/algorithm-util.git</developerConnection>
+        <tag>master</tag>
+    </scm>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </snapshotRepository>
+        <repository>
+            <id>staging</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
+
+    <profiles>
+        <profile>
+            <id>sonatype</id>
+            <build>
+                <resources>
+                    <resource>
+                        <directory>src/main/java</directory>
+                        <includes>
+                            <include>**/*.properties</include>
+                            <include>**/*.yml</include>
+                        </includes>
+                    </resource>
+                </resources>
+            </build>
+        </profile>
+
+        <profile>
+            <id>staging</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <gpg.executable>gpg</gpg.executable>
+                <gpg.passphrase>Qwe123456...</gpg.passphrase>
+            </properties>
+        </profile>
+
+    </profiles>
+
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
